--- a/app.json
+++ b/app.json
@@ -1,11 +1,10 @@
 {
   "expo": {
-    "name": "focus_time",
-    "slug": "snack-24c7cca0-f242-4101-b969-aae2a10eeabf",
+    "name": "focustime",
+    "slug": "snack-12de3d6b-7f01-4d5c-8a18-de6f739d0a28",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
